Add onboarding to containers

--- a/front/src/styles/components/_components-dir.scss
+++ b/front/src/styles/components/_components-dir.scss
@@ -4,6 +4,7 @@
 @import 'onboarding';
 @import 'sidenav';
 @import 'snackbar';
+@import 'select-avatar';
 @import 'table-with-pagination';
 @import 'tabs';
 @import 'user-info';
