Read user config from state on userInfo

--- a/front/src/styles/components/_user-info.scss
+++ b/front/src/styles/components/_user-info.scss
@@ -1,2 +1,21 @@
 .user-info-container {
+  color: $white;
+  width: 100%;
+  padding: 0px 16px;
+
+  .title-placeholder {
+    border-radius: 40px;
+    height: 20px;
+    width: 100%;
+    background-color: $gray-dark;
+    margin-bottom: 8px;
+  }
+
+  .subtitle-placeholder {
+    border-radius: 40px;
+    height: 16px;
+    background-color: $gray-dark;
+    margin-bottom: 8px;
+    width: 70%;
+  }
 }
