--- a/front/src/styles/base/_typography.scss
+++ b/front/src/styles/base/_typography.scss
@@ -1,8 +1,9 @@
 /* --------------------------------- Variables ------------------------------*/
 // Set font families vars
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-$font-family-base: 'Varela Round', sans-serif;
-$font-family-headings: 'Varela Round', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri&display=swap');
+$font-family-base: 'El Messiri', sans-serif;
+$font-family-headings: 'MedievalSharp', cursive;
 
 // Set text base size values vars
 $font-size-base: 1rem;
