--- a/front/src/styles/components/_header.scss
+++ b/front/src/styles/components/_header.scss
@@ -1,14 +1,19 @@
 .header-container {
-  top: 0;
-  right: 0;
+  padding: 24px 36px;
+  height: 150px;
   width: 100%;
-  padding: 16px 0px;
+  position: relative;
+  background: url('../../assets/images/stone-bg.png') repeat center center;
+  background-size: contain;
 
   .header-title {
     font-weight: bold;
   }
 
   .header-desc {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
     color: $subtitle-color;
   }
 
