--- a/front/src/styles/layout/_app-layout.scss
+++ b/front/src/styles/layout/_app-layout.scss
@@ -19,6 +19,46 @@
   background-size: cover;
 }
 
+.app-decoration {
+  position: absolute;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  .snow-bottom {
+    position: absolute;
+    bottom: 0px;
+    left: 5%;
+    height: 60px;
+  }
+  .snow-right-bottom {
+    position: absolute;
+    bottom: -56px;
+    right: -4px;
+    height: 200px;
+  }
+  .snow-corner-l {
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    height: 60px;
+  }
+  .snow-corner-r {
+    position: absolute;
+    top: -20px;
+    right: -6px;
+    height: 120px;
+  }
+  .snow-top {
+    position: absolute;
+    top: -5px;
+    right: 50%;
+    height: 60px;
+  }
+}
+
 .app-sidebar {
   @include display-flex(flex, column, nowrap);
   width: $side-nav-width;
