--- a/front/src/styles/base/_colors.scss
+++ b/front/src/styles/base/_colors.scss
@@ -57,8 +57,8 @@ $inactive-color: $gray-darker;
 $subtitle-color: $gray-light;
 $border-color: $gray-lighter;
 
-$font-base-color: $white;
-$font-base-alt-color: $black;
+$font-base-color: #e7dfd5;
+$font-base-alt-color: $white;
 
 //--------------------------------- App Background -----------------------------
 $bg-color: $primary-lightest;
