--- a/front/src/styles/components/_sidenav.scss
+++ b/front/src/styles/components/_sidenav.scss
@@ -6,11 +6,52 @@
   align-items: center;
   width: $side-nav-width;
   height: 100%;
-  background-color: $sidebar-bg !important;
-  color: $sidebar-text-color !important;
+  background-color: #3796a5;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='88' viewBox='0 0 88 88'%3E%3Cg fill='%23b4d6d9' fill-opacity='0.6'%3E%3Cpath fill-rule='evenodd' d='M29.42 29.41c.36-.36.58-.85.58-1.4V0h-4v26H0v4h28c.55 0 1.05-.22 1.41-.58h.01zm0 29.18c.36.36.58.86.58 1.4V88h-4V62H0v-4h28c.56 0 1.05.22 1.41.58zm29.16 0c-.36.36-.58.85-.58 1.4V88h4V62h26v-4H60c-.55 0-1.05.22-1.41.58h-.01zM62 26V0h-4v28c0 .55.22 1.05.58 1.41.37.37.86.59 1.41.59H88v-4H62zM18 36c0-1.1.9-2 2-2h10a2 2 0 1 1 0 4H20a2 2 0 0 1-2-2zm0 16c0-1.1.9-2 2-2h10a2 2 0 1 1 0 4H20a2 2 0 0 1-2-2zm16-26a2 2 0 0 1 2-2 2 2 0 0 1 2 2v4a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-4zm16 0a2 2 0 0 1 2-2 2 2 0 0 1 2 2v4a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-4zM34 58a2 2 0 0 1 2-2 2 2 0 0 1 2 2v4a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-4zm16 0a2 2 0 0 1 2-2 2 2 0 0 1 2 2v4a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-4zM34 78a2 2 0 0 1 2-2 2 2 0 0 1 2 2v6a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-6zm16 0a2 2 0 0 1 2-2 2 2 0 0 1 2 2v6a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-6zM34 4a2 2 0 0 1 2-2 2 2 0 0 1 2 2v6a2 2 0 0 1-2 2 2 2 0 0 1-2-2V4zm16 0a2 2 0 0 1 2-2 2 2 0 0 1 2 2v6a2 2 0 0 1-2 2 2 2 0 0 1-2-2V4zm-8 82a2 2 0 1 1 4 0v2h-4v-2zm0-68a2 2 0 1 1 4 0v10a2 2 0 1 1-4 0V18zM66 4a2 2 0 1 1 4 0v8a2 2 0 1 1-4 0V4zm0 72a2 2 0 1 1 4 0v8a2 2 0 1 1-4 0v-8zm-48 0a2 2 0 1 1 4 0v8a2 2 0 1 1-4 0v-8zm0-72a2 2 0 1 1 4 0v8a2 2 0 1 1-4 0V4zm24-4h4v2a2 2 0 1 1-4 0V0zm0 60a2 2 0 1 1 4 0v10a2 2 0 1 1-4 0V60zm14-24c0-1.1.9-2 2-2h10a2 2 0 1 1 0 4H58a2 2 0 0 1-2-2zm0 16c0-1.1.9-2 2-2h10a2 2 0 1 1 0 4H58a2 2 0 0 1-2-2zm-28-6a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 26a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm16 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM36 20a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm16 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm-8-8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 68a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm16-34a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm16-12a2 2 0 1 0 0 4 6 6 0 1 1 0 12 2 2 0 1 0 0 4 10 10 0 1 0 0-20zm-64 0a2 2 0 1 1 0 4 6 6 0 1 0 0 12 2 2 0 1 1 0 4 10 10 0 1 1 0-20zm56-12a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 48a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm-48 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-48a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm24 32a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-4a6 6 0 1 0 0-12 6 6 0 0 0 0 12zm36-36a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM10 44c0-1.1.9-2 2-2h8a2 2 0 1 1 0 4h-8a2 2 0 0 1-2-2zm56 0c0-1.1.9-2 2-2h8a2 2 0 1 1 0 4h-8a2 2 0 0 1-2-2zm8 24c0-1.1.9-2 2-2h8a2 2 0 1 1 0 4h-8a2 2 0 0 1-2-2zM3 68c0-1.1.9-2 2-2h8a2 2 0 1 1 0 4H5a2 2 0 0 1-2-2zm0-48c0-1.1.9-2 2-2h8a2 2 0 1 1 0 4H5a2 2 0 0 1-2-2zm71 0c0-1.1.9-2 2-2h8a2 2 0 1 1 0 4h-8a2 2 0 0 1-2-2zm6 66a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM8 86a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-68A6 6 0 1 1 8 2a6 6 0 0 1 0 12zm0-4a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm36 36a2 2 0 1 0 0-4 2 2 0 0 0 0 4z'/%3E%3C/g%3E%3C/svg%3E");
+  color: $font-base-color !important;
   // border-right: 1px solid $border-color !important;
   padding-bottom: 16px;
   position: relative;
+
+  .app-decoration {
+    position: absolute;
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    .snow-bottom {
+      position: absolute;
+      bottom: 0px;
+      left: 5%;
+      height: 60px;
+    }
+    .snow-right-bottom {
+      position: absolute;
+      bottom: -56px;
+      right: -20px;
+      height: 200px;
+    }
+    .snow-corner-l {
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      height: 60px;
+    }
+    .snow-corner-r {
+      position: absolute;
+      top: -20px;
+      right: -8px;
+      height: 120px;
+    }
+    .snow-top {
+      position: absolute;
+      top: -5px;
+      right: 50%;
+      height: 60px;
+    }
+  }
 
   .MuiAccordion-root {
     box-shadow: none;
@@ -50,7 +91,7 @@
       margin-left: -24px;
       .MuiAccordionDetails-root {
         margin-top: 16px;
-        background-color: rgba(0, 0, 0, 0.1);
+        background-color: $black;
         padding: 8px 0px;
         a {
           padding-left: 64px;
@@ -65,7 +106,7 @@
       min-height: inherit;
       padding: 0px;
       &.active {
-        color: $white;
+        color: #e7dfd5;
       }
     }
     .MuiAccordionSummary-content {
@@ -92,38 +133,38 @@
   .menu {
     width: 100%;
     z-index: 1;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.4);
     position: relative;
 
-    > a:last-child {
-      &:after {
-        content: '';
-        height: 38px;
-        border-radius: 2px 0px 0px 2px;
-        width: 4px;
-        background: linear-gradient(0deg, rgba(64, 95, 185, 0.8) 0%, rgba(56, 173, 192, 0.8) 100%);
-        position: absolute;
-        top: 0;
-        right: 0;
-        transition: top 0.5s ease;
-      }
-    }
-
-    *:nth-child(1).active ~ a:last-child:after {
-      top: 0%;
-    }
-
-    *:nth-child(2).active ~ a:last-child:after {
-      top: 46px;
-    }
-
-    *:nth-child(3).active ~ a:last-child:after {
-      top: calc(46px * 2);
-    }
-
-    *:nth-child(4).active:after {
-      top: calc(100% - 46px);
-    }
+    // > a:last-child {
+    //   &:after {
+    //     content: '';
+    //     height: 38px;
+    //     border-radius: 2px 0px 0px 2px;
+    //     width: 4px;
+    //     background: linear-gradient(0deg, black 0%, red 100%);
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+    //     transition: top 0.5s ease;
+    //   }
+    // }
+    //
+    // *:nth-child(1).active ~ a:last-child:after {
+    //   top: 0%;
+    // }
+    //
+    // *:nth-child(2).active ~ a:last-child:after {
+    //   top: 46px;
+    // }
+    //
+    // *:nth-child(3).active ~ a:last-child:after {
+    //   top: calc(46px * 2);
+    // }
+    //
+    // *:nth-child(4).active:after {
+    //   top: calc(100% - 46px);
+    // }
   }
 
   & .logo {
@@ -139,9 +180,9 @@
   }
 
   a {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1;
-    color: $sidebar-text-color;
+    color: $font-base-color;
     margin-bottom: 8px;
     text-decoration: none;
     padding: 12px 24px;
@@ -159,10 +200,11 @@
 
     &.active,
     &:hover {
-      color: $white;
+      color: #e7dfd5;
+      font-size: 18px;
     }
     svg {
-      height: 14px;
+      height: 24px;
       width: auto;
     }
   }
