--- a/front/src/styles/layout/__layout-dir.scss
+++ b/front/src/styles/layout/__layout-dir.scss
@@ -1,4 +1,4 @@
 /* Layouts
    ========================================================================== */
 @import 'app-layout';
-@import 'home-view';
+@import 'mission-view';
