--- a/front/src/styles/layout/_mission-view.scss
+++ b/front/src/styles/layout/_mission-view.scss
@@ -1,4 +1,4 @@
-.home-view-container {
+.mission-view-container {
   .line-svg {
     position: absolute;
     height: 70px;
@@ -7,6 +7,12 @@
     path {
       stroke: $secondary-dark;
     }
+  }
+
+  .cap-1 {
+    width: 100%;
+    border-radius: 18px;
+    border: 4px double #e7dfd5;
   }
 
   .show-more-button {
