--- a/game/src/styles/titlescreen.css
+++ b/game/src/styles/titlescreen.css
@@ -5,7 +5,7 @@
 
 #title-overlay {
   background: #eee
-    url(https://subtlepatterns.com/patterns/extra_clean_paper.png);
+    url(https://i.ibb.co/10wZBcX/1962.png);
 }
 
 #title-screen-header {
@@ -35,8 +35,6 @@
   list-style: none;
   margin: 100px 0 0 0;
   padding: 32px 0;
-  border-top: 4px double #aaa;
-  border-bottom: 4px double #aaa;
   position: relative;
   text-align: center;
 }
