--- a/game/src/styles/titlescreen.css
+++ b/game/src/styles/titlescreen.css
@@ -5,7 +5,7 @@
 
 #title-overlay {
   background: #eee
-    url(https://i.ibb.co/10wZBcX/1962.png);
+    url("../story/bg/1962.png");
 }
 
 #title-screen-header {
