Fix visual elements

--- a/front/src/styles/base/_colors.scss
+++ b/front/src/styles/base/_colors.scss
@@ -45,7 +45,7 @@ $secondary-lightest: $pelorous-blue-lightest;
 $primary-darkest: $san-marino-blue-darkest;
 $primary-darker: $san-marino-blue-darker;
 $primary-dark: $san-marino-blue-dark;
-$primary: $san-marino-blue;
+$primary: #f45905;
 $primary-light: $san-marino-blue-light;
 $primary-lighter: $san-marino-blue-lighter;
 $primary-lightest: $san-marino-blue-lightest;
