--- a/front/src/styles/components/_user-info.scss
+++ b/front/src/styles/components/_user-info.scss
@@ -1,5 +1,6 @@
 .user-info-container {
   color: $white;
+  text-shadow: 0 0 6px brown;
   width: 100%;
   padding: 38px 16px;
   background: rgb(21,205,203);
