--- a/front/src/styles/layout/_mission-view.scss
+++ b/front/src/styles/layout/_mission-view.scss
@@ -2,6 +2,9 @@
   h1 {
     text-shadow: 0 0 6px brown;
   }
+  a:hover {
+    text-decoration: none;
+  }
   .line-svg {
     position: absolute;
     height: 70px;
